# QUASAR

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  app.py  generate_dataset.py  main.py  pyproject.toml  requirements.txt
circuits/advanced/: random.qasm  toffoli.qasm
circuits/algorithms/: ghz.qasm  qft2.qasm
circuits/basics/: bell.qasm  cz.qasm  hadamard.qasm  pauli_x.qasm  swap.qasm
circuits/custom/: mixed.qasm  stress_test.qasm
circuits/edge_cases/: empty.qasm  invalid.qasm
datasets/: checkpoint.json  dataset_metadata.json  error_log.csv
models/: classification_report.txt  confusion_matrix.npy  feature_importance.csv  gradient_boosting.pkl  model_metrics.pkl  training_metadata.json
models/preprocessing/: feature_columns.json  label_encoder.joblib  preprocessing_metadata.json
models/preprocessing/splits/: X_test.csv  X_train.csv  y_test.csv  y_train.csv
reports/: eda_report.txt  evaluation_report.txt  explanation_report.txt  validation_report.txt
src/: analyzer.py  circuit_generator.py  dataset_generator.py  dataset_validator.py  eda.py  evaluate_model.py  explainability.py  feature_extractor.py  inference.py  noise_simulator.py  parser.py  preprocess.py  recommendation_engine.py  train_model.py
